--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,14 +33,25 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			{{ content }}
-			<hr>
-
-			<footer>
-				<p>&copy; Company 2012</p>
-			</footer>
-		</div> <!-- /container -->
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span1">
+					<!-- -->
+				</div>
+				<div class="span8">
+					{{ content }}
+					<hr>
+					<footer>
+						<p>&copy; Company 2012</p>
+					</footer>
+				</div>
+				<div class="span3">
+					<div class="well">
+						Right sidebar content
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 	</body>
