--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="{{ site.name }}">
 		<meta name="author" content="{{ site.author }}">
-		<title>{{ page.title }}</title>
+		<title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
 		<link href="/css/bootstrap.css" rel="stylesheet">
 		<link href="/css/bootstrap-responsive.css" rel="stylesheet">
 		<style type="text/css">
@@ -25,7 +25,7 @@
 				<div class="container">
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="/">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<li><a href="/about">About</a></li>
 							<li><a href="/contact">Contact</a></li>
 						</ul>
